force-app/main/default/objects/ucinn_ascendv2__Dedupe_Possible_Duplicate__c/ucinn_ascendv2__Dedupe_Possible_Duplicate__c.object-meta.xml
<CustomObject>
    <description>Store all the possible duplicate records in related list.</description>
    <label>Dedupe Possible Duplicate</label>
    <nameField>
        <label>Source Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dedupe Possible Duplicates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>