force-app/main/default/objects/ucinn_ascendv2__Dedupe_Possible_Duplicate__c/fields/ucinn_ascendv2__External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__External_System_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Has the same value with Name field for batch class using.</description>
    <externalId>true</externalId>
    <label>External System ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>