force-app/main/default/objects/ucinn_ascendv2__Dedupe_Possible_Duplicate__c/fields/ucinn_ascendv2__Source_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_Object_Name__c</fullName>
    <description>The source object name.</description>
    <label>Source Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>