force-app/main/default/objects/ucinn_ascendv2__Dedupe_Possible_Duplicate__c/fields/ucinn_ascendv2__Source_Record_Link_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_Record_Link_Formula__c</fullName>
    <description>Hyper link to the source record.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Name , Name)</formula>
    <label>Source Record Link</label>
    <type>Text</type>
</CustomField>