force-app/main/default/objects/ucinn_ascendv2__Dedupe_Possible_Duplicate__c/fields/ucinn_ascendv2__Source_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_Record_Name__c</fullName>
    <label>Source Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>